force-app/main/default/objects/ContinuingEducationUnit__c/ContinuingEducationUnit__c.object-meta.xml
<CustomObject>
    <description>Continuing Education Units</description>
    <label>CEU</label>
    <nameField>
        <label>CEU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>