force-app/main/default/objects/ContinuingEducationUnit__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>CUE Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atlas</fullName>
                <default>true</default>
                <label>Atlas</label>
            </value>
            <value>
                <fullName>KPA</fullName>
            </value>
            <value>
                <fullName>CCPDT</fullName>
            </value>
            <value>
                <fullName>IAABC</fullName>
            </value>
            <value>
                <fullName>CBCC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>