force-app/main/default/objects/ContinuingEducationUnit__c/fields/AuthorityOther__c.field-meta.xml
<CustomField>
    <fullName>AuthorityOther__c</fullName>
    <label>CUE Authority (Other)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>