force-app/main/default/objects/ContinuingEducationUnit__c/fields/ProgramDate__c.field-meta.xml
<CustomField>
    <fullName>ProgramDate__c</fullName>
    <label>Program Date</label>
    <type>Date</type>
</CustomField>