force-app/main/default/objects/ContinuingEducationUnit__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CEUs</relationshipLabel>
    <relationshipName>CEUs</relationshipName>
    <type>Lookup</type>
</CustomField>