force-app/main/default/objects/ContinuingEducationUnit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProgramTitle__c</columns>
    <columns>Authority__c</columns>
    <columns>DateCompleted__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Trainer__c</columns>
    <columns>Role__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>